# facerecognition

./: CMakeLists.txt
debian/: changelog  control  copyright  files  libface-dev.install  libface.1  libface.install  manpages
debian/.debhelper/libface-dev/: dbgsym-build-ids
debian/.debhelper/libface-dev/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/libface-dev/dbgsym-root/usr/share/doc/: libface-dev-dbgsym
doc/: 人脸识别接口说明文档.md
src/: CMakeLists.txt  libfacerecognition.pc.in  main.cpp
src/interface/: face.cpp  face.h
src/libfacerecognition/: facedetection.cpp  facedetection.h  facefeature.cpp  facefeature.h  facerecognition.cpp  facerecognition.h  liveness.cpp  liveness.h
src/models/: facefeature.param
